--- a/requirements.txt
+++ b/requirements.txt
@@ -1,55 +1,64 @@
 amqp==5.1.1
 appdirs==1.4.4
-asgiref==3.4.1
-async-timeout==3.0.1
-attrs==21.2.0
-beautifulsoup4==4.11.1
+asgiref==3.6.0
+async-timeout==4.0.2
+attrs==22.2.0
+autobahn==23.1.1
+Automat==22.10.0
+beautifulsoup4==4.11.2
 billiard==3.6.4.0
+bs4==0.0.1
 celery==5.2.7
-certifi==2021.5.30
-charset-normalizer==2.0.6
+certifi==2022.12.7
+cffi==1.15.1
+channels==3.0.4
+channels-redis==4.0.0
+charset-normalizer==3.0.1
 click==8.1.3
 click-didyoumean==0.3.0
 click-plugins==1.1.1
 click-repl==0.2.0
 constantly==15.1.0
-Django==3.2.7
+cryptography==39.0.0
+daphne==3.0.2
+Django==4.1.6
 django-celery-beat==2.4.0
 django-celery-results==2.4.0
-django-channels==0.7.0
-django-channels-presence==1.0.0
 django-cors-headers==3.13.0
 django-timezone-field==5.0
 djangorestframework==3.14.0
-hiredis==2.0.0
+frozendict==2.3.4
+html5lib==1.1
 hyperlink==21.0.0
-idna==3.2
-incremental==21.3.0
+idna==3.4
+incremental==22.10.0
 kombu==5.2.4
-lxml==4.6.3
-msgpack==1.0.2
-multitasking==0.0.9
-numpy==1.21.2
-oauthlib==3.2.2
-pandas==1.5.1
-prompt-toolkit==3.0.20
+lxml==4.9.2
+msgpack==1.0.4
+multitasking==0.0.11
+numpy==1.24.1
+pandas==1.5.3
+prompt-toolkit==3.0.36
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
-pycparser==2.20
-python-crontab==2.6.0
+pycparser==2.21
+pyOpenSSL==23.0.0
+python-crontab==2.7.1
 python-dateutil==2.8.2
-pytz==2022.6
-redis==3.5.3
-requests==2.26.0
-requests-oauthlib==1.3.1
+pytz==2022.7.1
+redis==4.4.2
+requests==2.28.2
+service-identity==21.1.0
 six==1.16.0
-soupsieve==2.2.1
-sqlparse==0.4.2
-txaio==21.2.1
-typing-extensions==3.10.0.2
-tzdata==2022.6
-urllib3==1.26.7
+soupsieve==2.3.2.post1
+sqlparse==0.4.3
+Twisted==22.10.0
+txaio==23.1.1
+typing_extensions==4.4.0
+tzdata==2022.7
+urllib3==1.26.14
 vine==5.0.0
-wcwidth==0.2.5
-yfinance==0.1.87
-zope.interface==5.4.0
+wcwidth==0.2.6
+webencodings==0.5.1
+yfinance==0.2.9
+zope.interface==5.5.2
