--- a/requirements.txt
+++ b/requirements.txt
@@ -28,6 +28,7 @@ django-cors-headers==3.13.0
 django-timezone-field==5.0
 djangorestframework==3.14.0
 frozendict==2.3.4
+gunicorn==20.1.0
 html5lib==1.1
 hyperlink==21.0.0
 idna==3.4
@@ -36,7 +37,7 @@ kombu==5.2.4
 lxml==4.9.2
 msgpack==1.0.4
 multitasking==0.0.11
-numpy==1.24.1
+numpy==1.24.2
 pandas==1.5.3
 prompt-toolkit==3.0.36
 pyasn1==0.4.8
